flowers for each nursery

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,3 +13,15 @@ body{
   margin: 5px; 
   padding: 10px; 
 }
+
+
+.retailers{
+  display:flex; 
+  flex-wrap:wrap;
+}
+.retailerCard{
+  flex-basis: 15%; 
+  border:1px solid black; 
+  margin: 5px; 
+  padding: 10px; 
+}
